#973 Use dedicated TypeParameterList for type parameter lookup results